--- a/_posts/2025-10-27-HTM.md
+++ b/_posts/2025-10-27-HTM.md
@@ -8,6 +8,8 @@ tags: Securities Banking HTM
 thumbnail: assets/img/IndividualHTM.gif
 ---
 
+<p style="text-align: left;"><font size="+3"><b>Introduction</b></font></p>
+
 <p align="justify">
 The quote often attributed to Vladimir Lenin goes, “There are decades where nothing happens and there are weeks where decades happen”.  The rapid collapse of Silicon Valley Bank (SVB) in March of 2023 and the subsequent Signature Bank and Frist Republic Bank failures will be remembered as one of these rare moments in history.  Within only a few short days, billions in deposits were withdrawn from these banks requiring regulators to take swift action to prevent global financial contagion.  In this article I will discuss the accounting treatment for unrealized losses, Silicon Valley Bank failure, resulting regulatory reforms, and the enduring effect on category IV banks.
 </p>
@@ -68,7 +70,7 @@ The visualization above shows the average HTM balance as a percentage of total s
 </p>
 
 <div class="img">
-    <img class="col three" src="{{ site.baseurl }}/assets/img/IndivdualHTM.gif">
+    <img class="col three" src="{{ site.baseurl }}/assets/img/IndividualHTM.gif">
 </div>
 
 <p align="justify">
@@ -79,12 +81,15 @@ According to Citizens Bank’s earnings presentation for the second quarter of 2
 
 
 <table border="1" width="100%">
-  <tr><th>HTM Growth During the First Half of 2022</th></tr>
+  <tr><th colspan="2">HTM Growth During the First Half of 2022</th></tr>
   <tr><td>M&T Bank</td><td>$10.6 Billion</td></tr>
   <tr><td>Citizens Bank</td><td>$7.3 Billion</td></tr>
   <tr><td>Huntington</td><td>$4.9 Billion</td></tr>
   <tr><td>Keybank</td><td>$646 Million</td></tr>
 </table>
+
+<br />
+
 
 <div class="img">
     <img class="col three" src="{{ site.baseurl }}/assets/img/EarlyMovers.gif">
