--- a/_posts/2025-10-27-HTM.md
+++ b/_posts/2025-10-27-HTM.md
@@ -61,7 +61,7 @@ The proposed capital rules will result in price volatility from the mark to mark
 </p>
 
 <div class="img">
-    <img class="col three" src="{{ site.baseurl }}/assets/img/HTMTrend.gif">
+    <img class="col three" src="{{ site.baseurl }}/assets/img/HTMTrend2.gif">
 </div>
 
 
