--- a/_posts/2025-10-27-HTM.md
+++ b/_posts/2025-10-27-HTM.md
@@ -11,18 +11,18 @@ thumbnail: assets/img/IndividualHTM.gif
 <p style="text-align: left;"><font size="+3"><b>Introduction</b></font></p>
 
 <p align="justify">
-The quote often attributed to Vladimir Lenin goes, “There are decades where nothing happens and there are weeks where decades happen”.  The rapid collapse of Silicon Valley Bank (SVB) in March of 2023 and the subsequent Signature Bank and Frist Republic Bank failures will be remembered as one of these rare moments in history.  Within only a few short days, billions in deposits were withdrawn from these banks requiring regulators to take swift action to prevent global financial contagion.  In this article I will discuss the accounting treatment for unrealized losses, Silicon Valley Bank failure, resulting regulatory reforms, and the enduring effect on category IV banks.
+The quote often attributed to Vladimir Lenin goes “There are decades where nothing happens and there are weeks where decades happen”. The rapid collapse of Silicon Valley Bank (SVB) in March of 2023 and the subsequent Signature Bank and Frist Republic Bank failures will be remembered as one of these rare moments in history. Within only a few short days billions in deposits were withdrawn from these banks requiring regulators to take swift action to prevent global financial contagion. In this article I will discuss the accounting treatment for unrealized losses, Silicon Valley Bank failure, resulting regulatory reforms, and the enduring effect on category IV banks.
 </p>
 
 
 <p style="text-align: left;"><font size="+3"><b>Unrealized Losses</b></font></p>
 
 <p align="justify">
-Let’s first cover unrealized losses on investments and how they impact a bank’s capital.  Under U.S Generally Accepted Accounting Principles (GAAP), banks are required to calculate Accumulated Other Comprehensive Income (AOCI) which is a summation of all unrealized gains and losses on a bank’s balance sheet.  Currently, Category IV and III banks (i.e., banks with total assets exceeding $100 and $250 billion, respectively) that are not “Advance Approach” institutions can opt out of the requirement to include AOCI in Capital.  
+Let’s first cover unrealized losses on investments and how they impact a bank’s capital. Under U.S Generally Accepted Accounting Principles (GAAP) banks are required to calculate Accumulated Other Comprehensive Income (AOCI) which is a summation of all unrealized gains and losses on a bank’s balance sheet. Currently, Category IV and III banks (i.e., banks with total assets exceeding $100 and $250 billion, respectively) that are not “Advance Approach” institutions can opt out of the requirement to include AOCI in Capital.  
 </p>
 
 <p align="justify">
-Gains and losses on bank investments flow through AOCI; however, the accounting treatment differs depending on the investment designation.  Accounting standards ASC Topic 320 requires all banks to categorize their debt securities as either Held-to-Maturity (HTM), Available-for-Sale (AFS), or Trading.  Securities categorized as Trading are purchased with the intention of being sold for a short-term profit, so any unrealized gains/losses are reflected in the income statement.  AFS securities are investments that are not intended for short-term gains or to be held until maturity.  AFS securities are reported on the balance sheet at fair value (i.e., the market price at time of measurement) with all unrealized gains and losses flowing through AOCI.   As the name would imply, HTM securities are all investments management has the ability and intention to hold until maturity.  Since HTM securities are not intended to be sold, changes in market value are neglected with these securities being valued at an amortized cost (i.e., purchase price adjusted for the amortization/accretion of any premium or discount).  Unrealized gains/losses on HTM securities are not included in AOCI unless there is a gain or loss present before the investment is categorized as HTM.  For example, if an AFS security with a $99 fair value and $100 amortized cost is transferred to HTM, the $1 unrealized loss is “Locked in” to the AOCI (even if the market value of the investment increases) and is amortized over the life of the security.  
+Gains and losses on bank investments flow through AOCI; However, the accounting treatment differs depending on the investment designation. Accounting standards ASC Topic 320 requires all banks to categorize their debt securities as either Held-to-Maturity (HTM), Available-for-Sale (AFS), or Trading. Securities categorized as Trading are purchased with the intention of being sold for a short-term profit, so any unrealized gains/losses are reflected in the income statement. AFS securities are investments that are not intended for short-term gains or to be held until maturity. AFS securities are reported on the balance sheet at fair value (i.e., the market price at time of measurement) with all unrealized gains and losses flowing through AOCI. As the name would imply, HTM securities are all investments an institution has the ability and intention to hold until maturity. Since HTM securities are not intended to be sold, changes in market value are neglected and these investments are valued at an amortized cost (i.e., purchase price adjusted for the amortization/accretion of any premium or discount). Unrealized gains/losses on HTM securities are not included in AOCI unless there is a gain or loss present before the investment is categorized as HTM. For example, if an AFS security with a $99 fair value and $100 amortized cost is transferred to HTM, the $1 unrealized loss is “Locked in” to the AOCI (even if the market value of the investment increases) and is amortized over the life of the bond.  
 </p>
 
 <p style="text-align: left;"><font size="+3"><b>Silicon Valley Bank: A Brief Overview</b></font></p>
@@ -33,40 +33,40 @@ Silicon Valley Bank Financial Group (SVBFG) was founded in 1983 and was headquar
 </p>
 
 <p align="justify">
-Silicon Valley Bank experienced steady asset growth from inception until 2019 when asset growth began to accelerate (Barr 18).  At year-end 2021, assets for Silicon Valley Bank totaled $209 billion, a significant increase from $114 billion the year prior and $70 billion at year-end 2019 (FFIEC).  During this period of low interest rates, fundraising activities (e.g. IPOs, secondary offerings, etc.) resulted in increased customer liquidity and fueled asset growth (SVBFG 28).
+Silicon Valley Bank experienced steady asset growth from inception until 2019 when asset growth began to accelerate (Barr 18). At year-end 2021 assets for Silicon Valley Bank totaled $209 billion, a significant increase from $114 billion the year prior and $70 billion at year-end 2019 (FFIEC). During this period of low interest rates fundraising activities (e.g. IPOs, secondary offerings, etc.) resulted in increased customer liquidity and fueled asset growth (SVBFG 28).
 </p>
 
 <p align="justify">
-SVBFG invested a large portion of these deposits in long-term HTM agency mortgage-backed securities (MBS).  HTM agency MBS totaled $7 billion at year-end 2019, growing to $64 billion by year-end 2021.  Due to the HTM designation, these securities could not be sold without reclassifying the entire securities portfolio as AFS limiting SVBFGs ability to restructure the investment portfolio.  As interest rates began to rise in 2022, SVBFG experienced a significant increase in unrealized losses on their investment portfolio.  
+SVBFG invested a large portion of these deposits in long-term HTM agency mortgage-backed securities (MBS). HTM agency MBS totaled $7 billion at year-end 2019, growing to $64 billion by year-end 2021. Due to the HTM designation these securities could not be sold without reclassifying the entire securities portfolio as AFS limiting SVBFGs ability to restructure the investment portfolio.  As interest rates began to rise in 2022, SVBFG experienced a significant increase in unrealized losses on their investment portfolio.   
 </p>
 
 <p align="justify">
-On March 8, 2023, Silicon Valley Bank issued a letter to shareholders stating the bank had sold nearly all its AFS securities at a $1.8 billion loss to reposition the balance sheet and increase asset sensitivity.  In this letter, President and CEO Greg Becker went on to say the following, “We are experienced at navigating market cycles and are well positioned to serve our clients through market volatility, with a high quality, liquid balance sheet and strong capital ratios” (SVB 1).
+On March 8, 2023, Silicon Valley Bank issued a letter to shareholders stating the bank had sold nearly all its AFS securities at a $1.8 billion loss to reposition the balance sheet and increase asset sensitivity. In this letter President and CEO Greg Becker went on to say the following, “We are experienced at navigating market cycles and are well positioned to serve our clients through market volatility, with a high quality, liquid balance sheet and strong capital ratios” (SVB 1).
 </p>
 
 <p align="justify">
-SVB’s highly concentrated and largely uninsured deposit base interpreted this announcement as a sign of distress.  A run on deposits ensued with a deposit outflow of over $40 billion on March 9th.  Supervisors were notified the evening of March 9th that $100 billion in outflows was expected the following day.  SVB’s liquidity was not sufficient to meet the extraordinary outflows, and the bank was closed the morning of March 10, 2023 (Barr 38).
+SVB’s highly concentrated and largely uninsured deposit base interpreted this announcement as a sign of distress. A run on deposits ensued with a deposit outflow of over $40 billion on March 9th. Supervisors were notified the evening of March 9th that $100 billion in outflows was expected the following day. SVB’s liquidity was not sufficient to meet the extraordinary outflows, and the bank was closed the morning of March 10, 2023 (Barr 38).
 </p>
 
 <p style="text-align: left;"><font size="+3"><b>Regulatory Fallout</b></font></p>
 
 <p align="justify">
-On July 27, 2023, the Federal Reserve Board, OCC, and FDIC jointly issued a proposed rule to implement new capital requirements generally applicable to all banks over $100 billion in total assets.  These new standards would require Category III and IV banks to calculate risk-weighted asset amounts under the current standardized approach and would require certain unrealized gains and losses on securities to be included in capital levels by removing the AOCI opt out election (Bank Capital Requirements)
+On July 27, 2023, the Federal Reserve Board, OCC, and FDIC jointly issued a proposed rule to implement new capital requirements generally applicable to all banks over $100 billion in total assets. These new standards would require Category III and IV banks to calculate risk-weighted asset amounts under the current standardized approach and would require certain unrealized gains and losses on securities to be included in capital levels by removing the AOCI opt out election (Bank Capital Requirements).
 </p>
 
 <p style="text-align: left;"><font size="+3"><b>HTM Utilization Trends</b></font></p>
 
 <p align="justify">
-The proposed capital rules will result in price volatility from the mark to market investments directly impacting capital.  This necessitates prudent price risk management which may involve increased HTM usage.  The rest of the article will focus on HTM trends for the following banks: Northern Trust, Regions Bank, HSBC Bank, Ally Bank, Keybank, Huntington, M&T Bank, Fifth Third Bank, Citizens Bank, and Morgan Stanley. 
+The proposed capital rules will result in price volatility from mark to market investments directly impacting capital. This necessitates prudent price risk management which may involve increased HTM utilization. The rest of the article will focus on HTM trends for category IV banks that are currently opted out of including AOCI in regulatory capital. The following banks are included in the analysis below: Regions Bank, HSBC Bank, Ally Bank, Keybank, Huntington, M&T Bank, Fifth Third Bank, and Citizens Bank. 
 </p>
 
 <div class="img">
-    <img class="col three" src="{{ site.baseurl }}/assets/img/HTMTrend2.gif">
+    <img class="col three" src="{{ site.baseurl }}/assets/img/HTMTrend.gif">
 </div>
 
 
 <p align="justify">
-The visualization above shows the average HTM balance as a percentage of total securities and the date regulators issued their proposed rule is represented by the red line.  The percentage of securities categorized as HTM significantly grew during the first two quarters of 2022 from 19% to 28%.  During this period, the FOMC began to increase their target range for the federal funds rate to fight rising inflation.  In response, several banks began to grow their HTM balances to mitigate interest rate risk.  
+The visualization above shows the average HTM balance as a percentage of total securities and the date regulators issued their proposed rule is represented by the red line. The percentage of securities categorized as HTM significantly grew during the first two quarters of 2022 from just under 14% to 22%. During this period the FOMC began to increase their target range for the federal funds rate to fight rising inflation. In response, several banks began to grow their HTM balances to mitigate interest rate risk.   
 </p>
 
 <div class="img">
@@ -74,18 +74,19 @@ The visualization above shows the average HTM balance as a percentage of total s
 </div>
 
 <p align="justify">
-According to Citizens Bank’s earnings presentation for the second quarter of 2022, securities designated as HTM increased to 27% to mitigate the impact of rising rates on tangible book value of the bank (Citizens 7).  Huntington Bank echoed this in their second quarter earnings presentation stating the securities portfolio had been rebalanced to stabilize net interest income and mitigate impact to tangible book value (Huntington 14).    
+According to Citizens Bank’s earnings presentation for the second quarter of 2022, securities designated as HTM increased to 27% to mitigate the impact of rising rates on tangible book value of the bank (Citizens 7). Huntington Bank echoed this in their second quarter earnings presentation stating the securities portfolio had been rebalanced to stabilize net interest income and mitigate impact to tangible book value (Huntington 14).    
 </p>
 
 <p style="text-align: left;"><font size="+3"><b>The Early Movers</b></font></p>
 
 
 <table border="1" width="100%">
-  <tr><th colspan="2">HTM Growth During the First Half of 2022</th></tr>
-  <tr><td>M&T Bank</td><td>$10.6 Billion</td></tr>
-  <tr><td>Citizens Bank</td><td>$7.3 Billion</td></tr>
-  <tr><td>Huntington</td><td>$4.9 Billion</td></tr>
-  <tr><td>Keybank</td><td>$646 Million</td></tr>
+  <tr><th colspan="2">2022 YoY HTM Growth / Percent Increase</th></tr>
+  <tr><td>M&T Bank</td><td>$10.8 Billion / 395%</td></tr>
+  <tr><td>Citizens Bank</td><td>$7.6 Billion / 339%</td></tr>
+  <tr><td>Huntington</td><td>$4.6 Billion / 37%</td></tr>
+  <tr><td>HSBC Bank</td><td>$2.1 Billion / 41%</td></tr>
+  <tr><td>Keybank</td><td>$1.2 Billion / 16%</td></tr>
 </table>
 
 <br />
