--- a/_posts/2025-10-27-HTM.md
+++ b/_posts/2025-10-27-HTM.md
@@ -81,7 +81,7 @@ According to Citizens Bank’s earnings presentation for the second quarter of 2
 
 
 <table border="1" width="100%">
-  <tr><th colspan="2">2022 YoY HTM Growth / Percent Increase</th></tr>
+  <tr style="text-align: center;"><th colspan="2">2022 YoY HTM Growth / Percent Increase</th></tr>
   <tr><td>M&T Bank</td><td>$10.8 Billion / 395%</td></tr>
   <tr><td>Citizens Bank</td><td>$7.6 Billion / 339%</td></tr>
   <tr><td>Huntington</td><td>$4.6 Billion / 37%</td></tr>
@@ -96,8 +96,12 @@ According to Citizens Bank’s earnings presentation for the second quarter of 2
     <img class="col three" src="{{ site.baseurl }}/assets/img/EarlyMovers.gif">
 </div>
 
+<p align="justify"><em>
+Note: AOCI in the visualization above only includes unrealized gains/losses from the investment portfolio.
+</em></p>
+
 <p align="justify">
-(Editing this section)    
+The banks that grew HTM balances during the rising rate environmet of 2022 generally experienced a lower decline in AOCI as a percent of total securites.  As market rates increased the decline in the fair value of HTM bonds did not flow through to AOCI mitigating some price risk. Of the banks that increased HTM balances in 2022 Keybank experienced the largest decline in AOCI as HTM balances only grew 16% while unrealized losses on AFS residential MBS increased from $311 million at year-end 2021 to $3.7 billion by the end of 2022.        
 </p>
 
 <p style="text-align: left;"><font size="+3"><b>Post Proposal Restructurings</b></font></p>
@@ -107,13 +111,71 @@ According to Citizens Bank’s earnings presentation for the second quarter of 2
 </div>
 
 <p align="justify">
-(Editing this section)    
+While some banks chose to increase HTM balances during the rising rate environment, others retained greater flexibility keeping investments largely categorized as available for sale. Of the banks examined, the three banks with the lowest HTM utilization saw significant HTM growth following the proposed changes to capital requirements. Ally Bank was the first to react, transferring $3.6 billion in securities from AFS to HTM. Fifth Third Bank grew HTM balances to 24% of securities during the first quarter of 2024 stating in the quarterly earnings presentation the reclassification was aimed at de-risking potential AOCI volatility under the proposed capital rules (Fifth Third Bank 43). Regions Bank was the last to see a significant increase in HTM balances communicating in their third quarter 2024 earnings presentation they anticipate AOCI to be included in regulatory capital and that $2.5 billion AFS securities were transferred to HTM to reduce volatility (Regions 10).
 </p>
+
+<p style="text-align: left;"><font size="+3"><b>Unrealized Losses Locked Into AOCI</b></font></p>
+
+
+<p align="justify">
+
+</p>
+
+
+
+
+<p style="text-align: left;"><font size="+3"><b>Concluding Thoughts</b></font></p>
+
+<p align="justify">
+
+</p>
+
 
 <p style="text-align: left;"><font size="+3"><b>Works Cited</b></font></p>
 
-<p align="justify">
-(Editing this section)    
+<p align="left">
+"Bank Capital Requirements: Basel III Endgame." Congress.gov, Library of Congress, 27
+October 2025, https://www.congress.gov/crs-product/R47855.
+</p>
+
+<p align="left">
+Barr, Michael. "Review of the Federal Reserve’s supervision and regulation of Silicon Valley 
+Bank." (2023).
+</p>
+<p align="left">
+Citizens Financial Group, Inc. (Citizens). “2Q22 Financial Results” 19 July 2022,
+https://investor.citizensbank.com/~/media/Files/C/CitizensBank-IR/reports-and
+presentations/2q22-earnings-presentation.pdf
+</p>
+<p align="left">
+Federal Financial Institutions Examination Council (FFIEC). Consolidated Reports of 
+Condition and Income for a Bank with Domestic and Foreign Offices – FFIEC 031.  
+https://cdr.ffiec.gov/public/ManageFacsimiles.aspx.
+</p>
+<p align="left">
+Fifth Third Bank. “Fifth Third Bancorp 2Q24 Earnings Presentation” 19 July 2024, 
+https://s23.q4cdn.com/252949160/files/doc_financials/2024/q2/2Q24-Earnings-
+Presentation.pdf
+</p>
+<p align="left">
+Huntington. “2022 Second Quarter Earnings Review” 21 July 2022,
+https://d1io3yog0oux5.cloudfront.net/_4ed7d9b6941e904956169671ae39a689/hu
+ntington/db/2706/27477/pdf/2Q22-HBAN-Presentation-vExternal5.pdf
+</p>
+<p align="left">
+Regions. “3rd Quarter Earnings” 18 October 2024, 
+https://s202.q4cdn.com/476346942/files/doc_financials/2024/q3/3Q24-
+Presentation_For-Website.pdf
+</p>
+<p align="left">
+Silicon Valley Bank Financial Group (SVBFG). “Form 10-K:  Fiscal Year Ended December 31, 
+2021.” https://ir.svb.com/financials/sec-filings/default.aspx.
+</p>
+<p align="left">
+Silicon Valley Bank (SVB). “Message to Stakeholders Regarding Recent Strategic Actions 
+Taken by SVB” 8 March 2023,
+https://s201.q4cdn.com/589201576/files/doc_downloads/2023/03/r/Q1-
+2023-Investor-Letter.FINAL-030823.pdf
 </p>
 
 <br />
