--- a/_posts/2025-10-27-HTM.md
+++ b/_posts/2025-10-27-HTM.md
@@ -101,7 +101,7 @@ Note: AOCI in the visualization above only includes unrealized gains/losses from
 </em></p>
 
 <p align="justify">
-The banks that grew HTM balances during the rising rate environmet of 2022 generally experienced a lower decline in AOCI as a percent of total securites.  As market rates increased the decline in the fair value of HTM bonds did not flow through to AOCI mitigating some price risk. Of the banks that increased HTM balances in 2022 Keybank experienced the largest decline in AOCI as HTM balances only grew 16% while unrealized losses on AFS residential MBS increased from $311 million at year-end 2021 to $3.7 billion by the end of 2022.        
+The banks that grew HTM balances during the rising rate environmet of 2022 generally experienced a lower decline in AOCI as a percent of total securites.  As market rates increased the decline in the fair value of HTM bonds did not flow through to AOCI mitigating some price risk. Of the banks that increased HTM balances in 2022, Keybank experienced the largest decline in AOCI as HTM balances only grew 16% while unrealized losses on AFS residential MBS increased from $311 million at year-end 2021 to $3.7 billion by the end of 2022.        
 </p>
 
 <p style="text-align: left;"><font size="+3"><b>Post Proposal Restructurings</b></font></p>
@@ -111,23 +111,13 @@ The banks that grew HTM balances during the rising rate environmet of 2022 gener
 </div>
 
 <p align="justify">
-While some banks chose to increase HTM balances during the rising rate environment, others retained greater flexibility keeping investments largely categorized as available for sale. Of the banks examined, the three banks with the lowest HTM utilization saw significant HTM growth following the proposed changes to capital requirements. Ally Bank was the first to react, transferring $3.6 billion in securities from AFS to HTM. Fifth Third Bank grew HTM balances to 24% of securities during the first quarter of 2024 stating in the quarterly earnings presentation the reclassification was aimed at de-risking potential AOCI volatility under the proposed capital rules (Fifth Third Bank 43). Regions Bank was the last to see a significant increase in HTM balances communicating in their third quarter 2024 earnings presentation they anticipate AOCI to be included in regulatory capital and that $2.5 billion AFS securities were transferred to HTM to reduce volatility (Regions 10).
+While some banks chose to increase HTM balances during the rising rate environment, others retained greater flexibility keeping investments largely categorized as available for sale. Of the banks examined, the three banks with the lowest HTM utilization saw significant HTM growth following the proposed changes to capital requirements. Ally Bank was the first to react transferring $3.6 billion in securities from AFS to HTM. Fifth Third Bank grew HTM balances to 24% of securities during the first quarter of 2024 stating in the quarterly earnings presentation the reclassification was aimed at de-risking potential AOCI volatility under the proposed capital rules (Fifth Third Bank 43). Regions Bank was the last to see a significant increase in HTM balances communicating in their third quarter 2024 earnings presentation they anticipate AOCI to be included in regulatory capital and that $2.5 billion AFS securities were transferred to HTM to reduce volatility (Regions 10).
 </p>
-
-<p style="text-align: left;"><font size="+3"><b>Unrealized Losses Locked Into AOCI</b></font></p>
-
-
-<p align="justify">
-
-</p>
-
-
-
 
 <p style="text-align: left;"><font size="+3"><b>Concluding Thoughts</b></font></p>
 
 <p align="justify">
-
+Although the proposed capital rules will not fully remove the AOCI opt-out until June 30, 2028, category IV banks have already taken steps in managing price risk using the HTM designation. Category III and IV banks will need to balance liquidity risks stemming from higher HTM utilization and the increased risks to capital stemming from unrealized gains and losses on investments. In my opinion HTM balances for category III and IV institutions will decline as securities with unrealized losses continue to mature and roll off balance sheets; However, HTM balances as a percentage of total investments will likely remain above pre-capital rule proposal levels. Looking forward, banks will need to be more proactive in managing HTM balances to manage price risk to capital in changing interest rate environments.  
 </p>
 
 
